--- a/credentials.yml
+++ b/credentials.yml
@@ -32,4 +32,4 @@ rest:
 # This entry is needed if you are using Rasa Enterprise. The entry represents credentials
 # for the Rasa Enterprise "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
-  url: "http://192.168.0.115:5002/webhooks/rest/webhook"
+  url: "https://rasa-actions-server-prakashram27.cloud.okteto.net/webhooks/rest/webhook"
