--- a/requirements.txt
+++ b/requirements.txt
@@ -138,7 +138,7 @@ python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3
 PyWavelets==1.4.1
-pywin32==301
+pypiwin32==223
 pywinpty==2.0.11
 PyYAML==6.0.1
 pyzmq==25.1.0
